--- a/70_pf/karts/css/style.css
+++ b/70_pf/karts/css/style.css
@@ -1,8 +1,17 @@
 @charset "utf-8";
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css);
+
+* {
+    /* padding과 border 크기를 박스의 안쪽으로 지정한다. */
+    box-sizing: border-box;
+}
+
+body, ul, h1, h2, p {
+    margin: 0;
+}
 
 body {
     font: 16px/1.6 "굴림", sans-serif;
-    margin: 0;
     background-color: #fff;
     color: #333;
 }
@@ -13,7 +22,6 @@ a {
 }
 
 ul {
-    margin: 0;
     padding: 0;
     list-style: none;
 }
@@ -42,7 +50,7 @@ nav a {
 }
 
 nav li {
-    border: 1px solid #1b3b86;
+    border: 1px solid #333;
     width: 160px;
     line-height: 60px;
     text-align: center;
@@ -54,6 +62,11 @@ nav li {
     display: inline-block;
 }
 
+.main :hover {
+    background-color: #333;
+    color: #fff;
+
+}
 
 .slide {
     height: 350px;
@@ -70,12 +83,140 @@ nav li {
 }
 
 .contents {
-    height: 720px;
+    height: 600px;
     /* 임의로 정함 */
-    background-color: #1b3b86;
+}
+
+.contents a {
+    color: #fff;
+}
+
+.link {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 120px;
+    background: #333;
+}
+
+
+.banner {
+    height: 150px;
+    display: flex;
+    /* 수직중앙배치 */
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 35px;
+}
+
+.banner .cont {
+    display: flex;
+}
+.banner .cont img {
+    margin-right: 16px;
+}
+
+.noga {
+    display: flex;
+    height: 330px;
+    background: #333;
+    padding: 30px;
+    color: #fff;
+}
+
+.noga h2 {
+    margin-bottom: 16px;
+}
+
+.notice {
+    width: 670px;
+}
+
+.notice tr td:nth-child(2) {
+    padding-left: 120px;
+}
+
+
+.gallery {
+    width: 670px;
+}
+
+.gallery h2 {
+    margin-right: 16px;
+}
+
+.gallery .inner {
+    display: flex;
+}
+
+.gallery a {
+    margin-right: 16px;
 }
 
 footer {
+    display: flex;
+    /* align-items와 align-contents를 함께 사용하면 align-contents가 적용된다. */
+    /* align-items: center; */
+    /* align-content: center; */
     height: 120px;
-    background-color: #555;
+    background-color: #111;
+    color: #777;
+    padding: 0 35px;
 }
+
+footer a {
+    color: #777;
+}
+
+.left {
+    width: 1000px;
+    padding-top: 35px;
+}
+
+.right {
+    width: 340px;
+}
+
+.sns {
+    height: 40px;
+    padding-top: 24px;
+    font-size: 24px;
+}
+
+.sns img {
+    width: 24px;
+}
+
+.sns ul {
+    margin-bottom: 8px;
+}
+
+.sns li {
+    display: inline;
+    margin-right: 8px;
+}
+
+.fs {
+    padding-top: 24px;
+}
+
+.sns li:nth-of-type(1) a:hover {
+    color: #395599;
+}
+.sns li:nth-of-type(2) a:hover {
+    color: #1C96E8;
+}
+.sns li:nth-of-type(3) a:hover {
+    color: #9F53A4;
+}
+/* .sns li:nth-of-type(1)::after {
+    content: "|";
+}
+
+.sns li:nth-of-type(2)::after {
+    content: "|";
+} */
+/* last-of-type을 제외한 li요소의 끝태그 앞에 | 추가 */
+/* .sns li:not(:last-of-type)::after {
+    content: " |";
+} */
