--- a/70_pf/dothome/kyowontour/css/style.css
+++ b/70_pf/dothome/kyowontour/css/style.css
@@ -104,6 +104,7 @@ nav a {
 
 /* footer */
 footer {
+    display: flex;
     height: 120px;
     background: yellow;
 }
@@ -113,7 +114,7 @@ footer {
 }
 .center_cont {
     width: calc(100% - 500px);
-    background: darkcyan;
+    background: darkmagenta;
 }
 
 .fs {
