--- a/70_pf/dothome/kyowontour/css/style.css
+++ b/70_pf/dothome/kyowontour/css/style.css
@@ -91,7 +91,30 @@ nav a {
 /* contents */
 .contents {
     width: 400px;
-    background: lightcoral;
+}
+
+/* banner */
+.banner {
+    height: 120px;
+    background: blue;
+}
+
+/* notice */
+.notice {
+    height: calc(100% - 600px);
+    background: yellow;
+}
+
+/* gallery */
+.gallery {
+    height: 360px;
+    background: #272424;
+}
+
+/* link */
+.link {
+    height: 120px;
+    background: whitesmoke;
 }
 
 /* slide */
@@ -105,19 +128,41 @@ nav a {
 /* footer */
 footer {
     display: flex;
+    align-items: center;
     height: 120px;
-    background: yellow;
+    background: #333;
 }
-
+/* bottom logo */
 .blogo {
     width: 200px;
 }
+
+/* bottom menu, address, copyright */
 .center_cont {
     width: calc(100% - 500px);
-    background: darkmagenta;
+    padding-left: 60px;
+    color: #777;
+}
+
+/* bottom menu */
+.bmenu {
+    display: flex;
+    height: 30px;
+}
+
+.bmenu li {
+    margin-right: 16px;
+}
+
+.bmenu li:not(:last-child):after {
+    content: "|";
+    margin-left: 16px;
+}
+
+.bmenu a {
+    color: #c0c0c0;
 }
 
 .fs {
     width: 300px;
-    background: darkgoldenrod;
 }
