--- a/70_pf/dothome/kyowontour/css/style.css
+++ b/70_pf/dothome/kyowontour/css/style.css
@@ -15,7 +15,7 @@ ul {
 body {
     background: #fff;
     color: #333;
-    font: 16px/1.6 '굴림', sans-serif;
+    font: 16px/1.6 'Noto Sans Kr', sans-serif; /* '굴림' */
 }
 
 a {
@@ -95,26 +95,90 @@ nav a {
 
 /* banner */
 .banner {
-    height: 120px;
-    background: blue;
+    display: flex;
+    height: 150px;
+    justify-content: space-between;
+    align-items: center;
+    padding:0 8px;
+}
+
+.cont {
+    display: flex;
+}
+
+.cont img {
+    margin-right: 16px;
+}
+
+.cont > div > h2 {
+    font-size: 16px;
 }
 
 /* notice */
 .notice {
     height: calc(100% - 600px);
-    background: yellow;
+    padding: 16px 13px 13px;
 }
+
+.notice h2 {
+    margin-bottom: 8px;
+}
+
+.notice li {
+    display: flex;
+    justify-content: space-between;
+    line-height: 2;
+    border-bottom: 1px solid transparent;
+
+}
+
+.notice li:hover {
+    border-bottom: 1px solid #309898;
+}
+
+/* .notice a {
+    display: inline-block;
+    width: 287px;
+    .nitice li를 display: flex; 사용하지 않았을 때
+} */
 
 /* gallery */
 .gallery {
-    height: 360px;
-    background: #272424;
+    height: 300px;
+    padding-top: 16px;
 }
+
+.gallery h2 {
+    margin-left: 13px;
+    margin-bottom: 16px;
+}
+
+.inner {
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+}
+
+/* .gallery a {
+    margin-right: 15px;
+} */
 
 /* link */
 .link {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     height: 120px;
-    background: whitesmoke;
+}
+
+.link span {
+    display: inline-block;
+}
+
+.link img {
+    background: #309898;
+    padding: 8px 6px;
+    border-radius: 15px;
 }
 
 /* slide */
