--- a/70_pf/dothome/kyowontour/css/style.css
+++ b/70_pf/dothome/kyowontour/css/style.css
@@ -15,7 +15,7 @@ ul {
 body {
     background: #fff;
     color: #333;
-    font: 16px/1.6 'Noto Sans Kr', sans-serif; /* '굴림' */
+    font: 16px/1.6 '굴림', sans-serif; /* '굴림' */
 }
 
 a {
