--- a/70_pf/dothome/nongshim/css/style.css
+++ b/70_pf/dothome/nongshim/css/style.css
@@ -89,11 +89,11 @@ nav a:hover {
 }
 /* 배너 */
 .banner {
-    height: 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 35px;
+    height: 200px;
 }
 .cont {
     display: flex;
@@ -105,9 +105,25 @@ nav a:hover {
 /* 공지사항 및 갤러리 */
 .tabs {
     height: 250px;
-    background: darkolivegreen;
+    padding: 25px 35px;
+    background: rgb(223, 171, 40);
+    line-height: 2;
+
 }
 
+.tabs li a {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #333;
+    padding: 0 16px;
+}
+.tabs h3 {
+    display: inline-block;
+}
+
+.tabs li a:hover {
+    background: #fff;
+}
 
 /* 푸터 영역 */
 footer {
