--- a/70_pf/dothome/kyowontour/css/style.css
+++ b/70_pf/dothome/kyowontour/css/style.css
@@ -172,13 +172,19 @@ nav a {
 }
 
 .link span {
-    display: inline-block;
+    display: block;
+    font-size: 0.8em;
 }
 
 .link img {
     background: #309898;
     padding: 8px 6px;
     border-radius: 15px;
+    text-align: center;
+}
+
+.link a {
+    text-align: center;
 }
 
 /* slide */
