--- a/70_pf/dothome/bluebottle/css/style.css
+++ b/70_pf/dothome/bluebottle/css/style.css
@@ -7,8 +7,6 @@
 }
 
 body {
-    width: 1200px;
-    margin: 0 auto;
     font: 16px/1.6 "Noto Sans KR", sans-serif;
     background-color: #fff;
     color: #333;
@@ -28,38 +26,75 @@ img {
     vertical-align: top;
 }
 
-
 /* header */
 header {
+    background: #f5f5f5;
+    margin: 0 auto;
+}
+
+header .inner {
+    width: 1200px;
     height: 100px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .logo a {
     display: inline-block;
     margin-top: 16px;
 }
+
+.logo img {
+    vertical-align: bottom;
+}
+
+nav a {
+    vertical-align: bottom;
+}
+
 .main {
     display: flex;
+    justify-content: space-evenly;
+}
+
+.main li {
+    position: relative;
+}
+
+/* 2뎁스메뉴 */
+.sub {
+    position: absolute;
+    width: 140px;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 9999; /* 슬라이드 위로 */
+}
+
+.main li:hover .sub {
+    background: #fff;
+    opacity: 1;
+    visibility: visible;
 }
 
 .main li a {
     width: 140px;
-    height: 40px;
-    border: 1px solid #00A9E0;
-    color: #00A9E0;
-    margin-right: 8px;
+    color: #00a9e0;
     display: inline-block;
     text-align: center;
-    line-height: 36px;
-
 }
 
 .main li a:hover {
     color: #fff;
-    background: #00A9E0;
+    background: #00a9e0;
+}
+
+/* container */
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
 }
 
 /* slide */
@@ -77,9 +112,11 @@ header {
     animation: slide 8s infinite;
 }
 
-/* .slide li {
-            height: 25%;
-        } */
+/*
+    .slide li {
+        height: 25%;
+    }
+*/
 
 @keyframes slide {
     0% {
@@ -118,7 +155,6 @@ header {
 .notice {
     width: 400px;
     padding: 10px;
-    
 }
 
 .notice h2 {
@@ -128,25 +164,22 @@ header {
 .notice li {
     line-height: 28px;
     border-bottom: 1px solid #333;
-
 }
 
 .notice li:hover {
     text-decoration: underline;
     border-bottom: 1px solid transparent;
-    background: #00A9E0;
+    background: #00a9e0;
 }
 
 .notice a {
     display: inline-block;
     width: 260px;
-
 }
 
 .notice span {
     display: inline-block;
     padding-left: 36px;
-
 }
 
 /* gallery */
@@ -154,22 +187,38 @@ header {
     width: 400px;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-right: 16px;
+    padding-right: 10px;
 }
 
 .gallery h2 {
     margin-bottom: 6px;
 }
 
-.inner {
+.gallery .inner {
     display: flex;
-    justify-content: space-between;
 }
 
+.gallery .inner a {
+    margin-right: 12px;
+}
 
 /* link */
 .link {
     width: 400px;
+}
+
+/* footer */
+footer {
+    height: 100px;
+    background: #333;
+    color: #777;
+}
+
+footer .inner {
+    width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 .copy {
@@ -178,15 +227,6 @@ header {
 
 .copy p {
     font-size: 14px;
-    color: #777;
-}
-
-/* footer */
-footer {
-    height: 100px;
-    background: #333;
-    display: flex;
-    justify-content: space-between;
 }
 
 .sns_fs {
@@ -197,16 +237,20 @@ footer {
     padding: 14px 0 0 8px;
 }
 
+.sns a {
+    color: #777;
+    margin: 0 8px;
+}
+
 .sns ul {
     display: flex;
 }
 
 .sns li {
-    margin-right: 16px;
-
+    font-size: 14px;
 }
 
 .fs {
     height: 50px;
-    padding: 8px;
+    padding: 8px 0 0 16px;
 }
