--- a/70_pf/dothome/nongshim/css/style.css
+++ b/70_pf/dothome/nongshim/css/style.css
@@ -67,10 +67,66 @@ nav a:hover {
 .container {
     width: calc(100% - 200px);
 }
-/* 슬라이드 이미지 */
-.slide {
-    height: 400px;
+/* fade 이미지 */
+.fade img {
+    vertical-align: top;
 }
+
+.fade {
+    position: relative;
+    list-style: none;
+    padding: 0;
+    height: 400px;
+    overflow: hidden;
+}
+
+.fade img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.fade li {
+    width: 100%;
+    position: absolute;
+    animation: 6s infinite;
+}
+
+.fade li:nth-of-type(1) {
+    animation-name: fade1;
+}
+.fade li:nth-of-type(2) {
+    animation-name: fade2; opacity: 0;
+}
+.fade li:nth-of-type(3) {
+    animation-name: fade3; opacity: 0;
+}
+
+@keyframes fade1 {
+    0% {opacity: 0;}
+    10% {opacity: 1;}
+    43% {opacity: 1;}
+    66% {opacity: 0;}
+    100% {opacity: 0;}
+}
+
+@keyframes fade2 {
+    0% {opacity: 0;}
+    33% {opacity: 0;}
+    43% {opacity: 1;}
+    66% {opacity: 1;}
+    76% {opacity: 0;}
+    100% {opacity: 0;}
+}
+
+@keyframes fade3 {
+    0% {opacity: 1;}
+    10% {opacity: 0;}
+    66% {opacity: 0;}
+    76% {opacity: 1;}
+    100% {opacity: 1;}
+}
+
 /* 바로가기 링크 */
 .link {
     position: absolute;
