--- a/70_pf/karts/css/style.css
+++ b/70_pf/karts/css/style.css
@@ -45,10 +45,6 @@ nav {
     height: 60px;
 }
 
-nav a {
-    font-size: 18px;
-}
-
 nav li {
     border: 1px solid #333;
     width: 160px;
@@ -61,6 +57,12 @@ nav li {
     */
     display: inline-block;
 }
+
+nav a {
+    display: block;
+    font-size: 18px;
+}
+
 
 .main :hover {
     background-color: #333;
