--- a/70_pf/dothome/bluebottle/css/style.css
+++ b/70_pf/dothome/bluebottle/css/style.css
@@ -80,9 +80,9 @@ nav a {
 }
 
 .main li a {
+    display: block;
     width: 140px;
     color: #00a9e0;
-    display: inline-block;
     text-align: center;
 
     
