--- a/70_pf/dothome/nongshim/css/style.css
+++ b/70_pf/dothome/nongshim/css/style.css
@@ -25,32 +25,87 @@ a {
 /* 상단 영역 */
 .wrap {
     display: flex;
-    height: 850px;
+    height: 970px;
 }
-/* 헤더 영역 */
 header {
+    /* position: relative; */
     width: 200px;
-    background: #f6f6f6;
+    /* vh 화면전체(세로) */
+    background: #dac0c0;
+    padding-top: 30px;
 }
-.gnb {
+
+/* 로고 */
+.logo {
+    width: 200px;
+    height: 40px;
+    margin-bottom: 30px;
     text-align: center;
 }
-nav {
-    padding: 20px;
+
+/* 내비게이션 */
+.gnb {
+    margin: 20px;
 }
-nav a {
+
+/* 1뎁스 메인 */
+.main > li {
+    position: relative;
+    /* sub가 li의 자식이기 때문 */
+}
+
+.main > li > a {
     display: block;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    border: 1px solid #333;
+    text-align: center;
     font-size: 18px;
-    margin-top: 4px;
+    border: 1px solid #333;
+    background: #fff;
+    padding: 8px 0;
+    color: #333;
 }
-nav a:hover {
+
+.main > li > a:hover {
     background: #e6001e;
     color: #fff;
 }
+
+.main:hover .sub {
+    z-index: 1;
+    left: 160px;
+    visibility: visible;
+    opacity: 1;
+}
+
+.sub {
+    z-index: 1; /* -1까지 안써도 됌 */
+    position: absolute;
+    display: flex;
+    visibility: hidden; /* 잘 가리고 호버 잘되게 함 */
+    top: 0;
+    opacity: 0;
+    left: 100px;
+    width: calc(100vw - 180px);
+    background: rgba(119, 119, 119, 0.5);
+    transition: 0.3s;
+    line-height: 2;
+    padding: 9px 30px;
+}
+
+.sub li a {
+    display: block;
+    /* text-align: center; */
+    font-size: 14px;
+    color: #fff;
+    padding-left: 16px;
+    width: 160px;
+    margin: 0 16px;
+}
+
+.sub li a:hover {
+    color: #333;
+    background: #fff;
+}
+
 .spotmenu a {
     color: #555;
 }
@@ -241,6 +296,10 @@ nav a:hover {
 #tab1 a:hover {
     background: rgb(223, 171, 40);
     color: #fff;
+}
+/* 갤러리 */
+#tab2 img {
+    height: 180px;
 }
 
 #tab2 a:not(:last-of-type) {
