--- a/70_pf/dothome/nongshim/css/style.css
+++ b/70_pf/dothome/nongshim/css/style.css
@@ -35,6 +35,38 @@ header {
     padding-top: 30px;
 }
 
+/* 모달 */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+}
+
+.popup {
+    width: 500px;
+    margin: 10% auto;
+    background: #fff;
+    padding: 30px;
+}
+
+.popup p {
+    padding: 16px 0 32px
+}
+
+.popup>div {
+    text-align: right;
+}
+
+.popup>div>a {
+    background: #777;
+    padding: 8px 16px;
+    color: #fff;
+}
+
+
 /* 로고 */
 .logo {
     width: 200px;
