--- a/70_pf/dothome/bluebottle/css/style.css
+++ b/70_pf/dothome/bluebottle/css/style.css
@@ -43,6 +43,7 @@ header .inner {
 
 .inner {
     position: relative;
+    width: 100%;
 }
 
 .logo img {
@@ -61,7 +62,6 @@ header .inner {
     position: absolute;
     z-index: 1;
     width: 100%;
-    height: 0;
     top: 100px;
     left: 0;
     background: rgba(0, 0, 0, 0.5);
