--- a/70_pf/dothome/bluebottle/css/style.css
+++ b/70_pf/dothome/bluebottle/css/style.css
@@ -29,10 +29,12 @@ img {
 /* header */
 header {
     background: #f5f5f5;
+    width: 100%;
     margin: 0 auto;
 }
 
 header .inner {
+    position: relative;
     width: 1200px;
     height: 100px;
     margin: 0 auto;
@@ -41,18 +43,15 @@ header .inner {
     align-items: flex-end;
 }
 
-.inner {
-    position: relative;
-    width: 100%;
-}
-
-.logo img {
-    padding-top: 24px;
+.logo {
+    width: 200px;
+    height: 40px;
 }
 
 .gnb {
     z-index: 2;
     position: relative;
+    width: 1200px;
     height: 100px;
     top: 64px;
     right: 0;
@@ -64,6 +63,7 @@ header .inner {
     width: 100%;
     top: 100px;
     left: 0;
+    margin: 0 auto;
     background: rgba(0, 0, 0, 0.5);
 }
 
@@ -94,7 +94,7 @@ header .inner {
 
 /* 2dep */
 .sub {
-    visibility: hidden;
+    /* visibility: hidden; */
     display: none;
     height: 150px;
     line-height: 30px;
@@ -275,4 +275,38 @@ footer .inner {
 .fs {
     height: 50px;
     padding: 8px 0 0 16px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(51, 51, 51, 0.5);
+    z-index: 999;
+}
+
+.popup {
+    margin: 50px auto;
+    width: 500px;
+    height: 600px;
+    padding: 50px;
+    background: #fff;
+}
+
+.popup p {
+    margin-bottom: 30px;
+
+}
+
+.popup div {
+    text-align: right;
+}
+
+.popup a {
+    background: #333;
+    color: #fff;
+    width: 100px;
+    padding: 2px;
 }
