--- a/70_pf/dothome/volkswagen/css/style.css
+++ b/70_pf/dothome/volkswagen/css/style.css
@@ -38,35 +38,65 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 100px;
+    position: relative;
 }
 
 nav {
     width: 800px;
     height: 60px;
+    z-index: 2;
 }
 
-nav a {
+.sub_bg {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    top: 100px;
+    left: 0;
+    margin: 0 auto;
+    background: rgba(0, 0, 0, 0.5);
+
+}
+
+.main {
+    display: flex;
+    text-align: center;
+    justify-content: end;
+}
+
+.main>li {
+    width: 160px;
+    height: 40px;
+}
+
+.main>li>a {
     display: block;
     font-size: 18px;
-}
-
-nav li {
-    border: 1px solid #333;
-    width: 160px;
-    line-height: 60px;
-    text-align: center;
-
-    /*
-        inline, inline-block, none은 자기자신에게 부여
-        inline은 width를 부여하지 못함
-    */
-    display: inline-block;
-}
-
-.main :hover {
-    background-color: #333;
+    font-weight: bold;
+    background: #999;
     color: #fff;
+    padding: 10px;
+}
 
+.main>li>a:hover {
+    background: #fff;
+    color: #333;
+}
+
+.sub {
+    height: 160px;
+    line-height: 30px;
+    display: none;
+}
+
+.sub>li>a {
+    display: block;
+    color: #fff;
+}
+
+.sub>li>a:hover {
+    background: #fff;
+    color: #333;
 }
 
 .slide {
